[ANY23-32] replace hardcoded bash script with generated via appassembler
git-svn-id: https://svn.apache.org/repos/asf/incubator/any23/trunk@1231430 13f79535-47bb-0310-9956-ffa450edef68